--- a/preview/index.html
+++ b/preview/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Preview</title>
         <link type="text/css" href="css/previm.css" rel="stylesheet" media="all" />
+        <link type="text/css" href="css/lib/mermaid.css" rel="stylesheet" media="all" />
     </head>
     <body id="body">
         <div id="header">
@@ -15,6 +16,7 @@
             <script src="js/lib/marked.min.js"></script>
             <script src="js/lib/highlight.pack.js"></script>
             <script src="js/lib/textile.js"></script>
+            <script src="js/lib/mermaid.min.js"></script>
             <script src="js/previm.js"></script>
             <div id="monitor"></div>
         </div>
